openscholar/themes/os_basetheme/css/global.base.css
/* ... */
.content-left.content-right.content-bottom .region-content-first .sv-list-video.sv-list-view-teaser .file-info,
.content-left.content-right.content-bottom .region-content-second .sv-list-video.sv-list-view-teaser .file-info,
.content-left.content-right.content-bottom .region-content-bottom .sv-list-video.sv-list-view-teaser .file-info,
.sidebar .sv-list-video.sv-list-view-teaser .file-info,
#content-column .sv-list-video.sv-list-view-teaser img,
#content-column .sv-list-image.sv-list-view-teaser .file-image img {
    margin-bottom: 20px;
}
#content-column .sv-list-image.sv-list-view-teaser .file-image,
#content-column .sv-list-video.sv-list-view-teaser .file-video {
    clear: both;
    display: block;
}
a.entity-link {
    display: inline;
    padding-right: 8px;
    font-weight: bold;
}
.sv-list-layout-list a.entity-link {
    font-weight: normal;
}
div.content a.download-link {
    /*background: url("../images/scholarbase-sprite.png") no-repeat scroll 2px -588px rgba(0, 0, 0, 0);
	 padding-left: 1.2em;*/
    
    font-size: 11px;
    text-decoration: underline;
}
.sv-list-all.sv-list-view-teaser .file-info {
    display: table;
}
/** SV LIST GRID VIEW **/

.os_sv_list_file.sv-list-layout-grid > div {
    display: inline-block !important;
    margin-right: 0.5em;
}
.sidebar .os_sv_list_file.sv-list-layout-grid > div {
    margin-right: 0.1em;
}
.two-sidebars #content-column .sidebar .os_sv_list_file.sv-list-layout-grid > div {
    margin-right: 0.4em;
}
.os_sv_list_file.sv-list-layout-grid img {
    margin-bottom: 8px !important;
}
#content-column .sv-list-layout-grid .file {
    border-bottom: none !important;
}
.os_sv_list_file.sv-list-layout-grid > div.file {
    vertical-align: top;
}
.sv-list-layout-grid.sv-grid-2 >.file,
.sv-list-layout-grid.sv-grid-2 >.oembed {
    width: 48%;
}
.sv-list-layout-grid.sv-grid-3 >.file,
.sv-list-layout-grid.sv-grid-3 >.oembed {
    width: 31%;
}
.sv-list-layout-grid.sv-grid-4 >.file,
.sv-list-layout-grid.sv-grid-4 >.oembed {
    width: 23%;
}
.sv-list-layout-grid.sv-grid-5 >.file,
.sv-list-layout-grid.sv-grid-5 >.oembed {
    width: 18%;
}
.sv-list-video.sv-list-layout-grid img {
    width: 100%;
}
.sv-list-image.sv-list-view-teaser.sv-list-layout-grid .file,
.sv-list-video.sv-list-view-teaser.sv-list-layout-grid .file {
    padding-bottom: 5px !important;
}
.sv-list-video.sv-list-view-teaser.sv-list-layout-grid .content,
.sv-list-image.sv-list-view-teaser.sv-list-layout-grid .content {
    position: relative;
}
p {
    margin: 0px 0px 1.5em;
    padding: 0px;
}
#columns p:only-child,
#columns p:last-child {
    margin: 0 0px .4em;
}
span.os-cvlinkwrap {
	margin-bottom:0;
}
a,
a:visited {
    text-decoration: none;
    color: #005C9C;
}
/* INFINITE SCROLL BUTTON */

#autopager-load-more,
#autopager-load-prev,
.autopager-load-all {
    text-align: center;
}
#autopager-load-more:hover,
#autopager-load-prev:hover,
#autopager-load-all:hover {
    background-color: #FFFFFF;
}
#autopager-load-prev a,
#autopager-load-more a,
.autopager-load-all a {
    background: #f1f1f1;
    border-radius: 4px 4px 4px 4px;
    border: 1px solid #CCCCCC;
    color: #215990;
    display: block;
    font-size: 13px;
    font-weight: bold;
    margin: 0px auto;
    padding: 3px;
    width: 123.5px;
}
#autopager-load-prev a:hover,
#autopager-load-more a:hover,
.autopager-load-all a:hover {
    text-decoration: none !important;
    cursor: pointer;
}
#main-content-header .autopager-load-all {
    position: absolute;
    top: 18px;
    right: 0;
}
em,
dfn {
    font-style: italic;
}
ins {
    border-bottom: none;
    text-decoration: none;
}
pre,
code,
tt,
samp,
kbd,
var {
    font-size: 1em;
    font-family: Consolas, "Lucida Console", Menlo, Monaco, "DejaVu Sans Mono", monospace, sans-serif;
    /* sans-serif Safari hack */
}
blockquote,
q {
    font-style: italic;
    quotes: "" "";
}
blockquote {
    margin: 0 0 1.5em;
    padding: 0 0 0 40px;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
    content: "";
}
blockquote {
    border-left: 2px solid #807E6D;
    font-style: italic;
    margin: 1em 3em;
    padding-left: 1em;
}
strong,
dfn,
caption,
th {
    font-weight: 700;
}
ul,
ol {
    margin: 0 0 1.5em 17px;
    padding: 0;
}
.field-name-body ol {
    margin: 0 0 1.5em 21px;
}
.item-list ul,
.item-list ol {
    margin: 0;
    padding: 0;
}
.page-help .item-list ul,
.page-help .item-list ol {
    margin: 0 0 1.5em 17px;
}
.item-list ul li {
    margin: 0;
    padding: 0;
}

.block ul {
    padding-left: 0;
    list-style: none;
}
.block.block-boxes-os_boxes_html ul,
.block .field-name-body ul {
    list-style: disc;
}
ul ul,
ul ol,
ol ol,
ol ul,
.block ul ul,
.block ul ol,
.block ol ol,
.block ol ul,
.item-list ul ul,
.item-list ul ol,
.item-list ol ol,
.item-list ol ul {
    margin-bottom: 0;
}
/** 1 A a (1) **/

.mceContentBody ol,
#content-column ol {
    list-style-type: decimal;
}
.mceContentBody ol ol,
#content-column ol ol {
    list-style-type: upper-alpha;
    margin-left: 25px;
}
.mceContentBody ol ol ol,
#content-column ol ol ol {
    list-style-type: lower-alpha;
}
.mceContentBody ol ol ol ol,
#content-column ol ol ol ol {
    list-style-type: decimal;
}
ul ul ul {
    list-style-type: square;
}
ol {
    list-style-type: decimal;
}
ol ol {
    list-style-type: lower-alpha;
}
ol ol ol {
    list-style-type: lower-roman;
}
ul ul,
ul ul ul ul {
    list-style-type: circle;
}
.view-os-image-gallery {
    margin-bottom: 15px;
}
.view-os-image-gallery ul li,
.views-field-media-gallery-media ul {
    list-style-type: none;
}
.view-id-os_image_gallery li.views-row {
    margin-bottom: 15px;
}
.view-id-os_image_gallery .views-field-title .field-content a {
    font-weight: bold;
}
.view-os-events {
    margin-bottom: 15px;
}
.page-user .profile .item-list li {
    list-style: none !important;
}
.tweets-pulled-listing ul {
    margin-left: 0;
}
.block-boxes-os_taxonomy_fbt ul ul {
    margin: 0 10px;
}
/* ... */

